1.2.2:
- Removed ethereal wood type

1.2.1:
- Updated to 1.15.2
- Improved Table shape
- Working on table rendering :|

1.2.0:
- Updated to 1.15.1
- Added custom shape to table
- Removed Hwyla compatibility