@@ -1,26 +1,0 @@
-package tk.themcbros.interiormod.client.screen;
-
-import net.minecraft.client.gui.screen.inventory.ContainerScreen;
-import net.minecraft.entity.player.PlayerInventory;
-import net.minecraft.util.text.ITextComponent;
-import tk.themcbros.interiormod.container.FridgeContainer;
-
-public class FridgeScreen extends ContainerScreen<FridgeContainer> {
-
-	public FridgeScreen(FridgeContainer screenContainer, PlayerInventory inv, ITextComponent titleIn) {
-		super(screenContainer, inv, titleIn);
-	}
-	
-	@Override
-	public void render(int mouseX, int mouseY, float partialTicks) {
-		this.renderBackground();
-		super.render(mouseX, mouseY, partialTicks);
-		this.renderHoveredToolTip(mouseX, mouseY);
-	}
-
-	@Override
-	protected void drawGuiContainerBackgroundLayer(float partialTicks, int mouseX, int mouseY) {
-		
-	}
-
-}
